# GenericFramework

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
examples/: admissible_nested_example.h  example_EDF_sched.cpp  example_for_nested_record.cpp  example_for_record_updates.cpp  example_new_refl.cpp  example_record_serialization.cpp  new_external_mergesort_variant.cpp  new_struct_delta.cpp  new_struct_delta2.cpp  signal_example.cpp  simple_double_example.cpp  test_threadpoolsched.cpp  test_triple_buffer.cpp  udp1.cpp  udp2.cpp  udp_signals_example.h
include/jackbergus/algorithms/: ExternalMergeSort.h  QuickSort.h
include/jackbergus/concurrency/: HoareMonitor.h  RWLock.h  ThreadPool.h
include/jackbergus/concurrency/thread_pool/: EDF.h  Task.h
include/jackbergus/data/: FltForTemplateParam.h  NetworkEnum.h  NetworkFloat.h  NetworkInt.h  UpdatableElement.h  endianess.h  packed.h  recursive_encoder.h  template_typing.h
include/jackbergus/data_structures/: IntervalTree.h  LRUCache.h
include/jackbergus/framework/: Controller.h  FileSerializer.h  Model.h  View.h
include/jackbergus/framework/monitor/: AbstractVariableMonitor.h  AnyFundamentalVariableMonitoring.h  AnyFundamentalVariableMonitoringWithSharedFile.h  AnyStructMonitoring.h  ContinuousMonitoring.h  ContinuousVariableMonitoring.h  NativeTypeMonitoring.h  VariableMonitor.h
include/jackbergus/framework/monitor/deserializer/: FieldGetting.h  FileLogger.h  RecordFileDeserializer.h
include/jackbergus/framework/monitor/serializer/: binary_to_csv_serializer.h  multibinary_to_csv_serializer.h
include/jackbergus/framework/ndp/: AnyStructMonitoring.h  FileBlockReader.h  FileBlockWrapper.h  FileSerializer.h
include/jackbergus/framework/structures/: ControllerRequest.h  ModelStatus.h
include/jackbergus/framework/types/: NativeTypes.h
include/jackbergus/networking/: InitNetworking.h
include/jackbergus/networking/udp/: UDPBiDirectional.h  UDPClient.h  UDPServer.h  udp.h
src/jackbergus/concurrency/: HoareMonitor.cpp  ThreadPool.cpp
src/jackbergus/concurrency/thread_pool/: EDF.cpp  Task.cpp
src/jackbergus/data/: FltForTemplateParam.cpp
src/jackbergus/framework/: Controller.cpp  FileSerializer.cpp  Model.cpp  View.cpp
src/jackbergus/framework/monitor/: NativeTypeMonitoring.cpp
src/jackbergus/framework/ndp/: FileSerializer.cpp
src/jackbergus/monitor/deserializer/: FieldGetting.cpp  RecordFileDeserializer.cpp
src/jackbergus/monitor/serializer/: binary_to_csv_serializer.cpp  multibinary_to_csv_serializer.cpp
src/jackbergus/networking/: InitNetworking.cpp
